--- a/food-delivery/src/components/Header/CartPopup/Cart/Cart.scss
+++ b/food-delivery/src/components/Header/CartPopup/Cart/Cart.scss
@@ -79,7 +79,7 @@ ul {
 
 .disabled {
   pointer-events: none;
-  background-color: grey;
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 900px) {
