--- a/food-delivery/src/components/Header/Header.scss
+++ b/food-delivery/src/components/Header/Header.scss
@@ -16,6 +16,7 @@ header {
   .brand {
     @include flexCenter(row);
     height: 100%;
+    text-decoration: none;
 
     .logo {
       width: 40px;
@@ -23,6 +24,7 @@ header {
     }
 
     h1 {
+      color: black;
       font-family: "Bebas Neue", cursive;
       font-size: 2.5rem;
       margin-top: 5px;
