--- a/food-delivery/src/components/Menu/Meal/Meal.scss
+++ b/food-delivery/src/components/Menu/Meal/Meal.scss
@@ -33,6 +33,7 @@
     height: 100%;
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.2);
     object-fit: cover;
+    transition: transform 0.2s ease-in-out;
   }
 
   .meal-info {
